@@ -88,11 +88,7 @@ public class GenericMapToListTest_Tree extends TestCase
 			dkm.addToListFor(null, CONST_F);
 			fail();
 		}
-		catch (NullPointerException e)
-		{
-			// OK
-		}
-		catch (IllegalArgumentException e)
+		catch (NullPointerException | IllegalArgumentException e)
 		{
 			// OK
 		}
@@ -162,7 +158,7 @@ public class GenericMapToListTest_Tree extends TestCase
 		populate();
 		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsListFor(new Integer(1)));
+		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
 		assertTrue(dkm.containsListFor(Integer.valueOf(2)));
 		assertTrue(dkm.containsListFor(Integer.valueOf(5)));
 		assertFalse(dkm.containsListFor(Integer.valueOf(-4)));
@@ -195,7 +191,7 @@ public class GenericMapToListTest_Tree extends TestCase
 		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
 		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsListFor(new Integer(1)));
+		assertTrue(dkm.containsListFor(Integer.valueOf(1)));
 		assertEquals(2, dkm.sizeOfListFor(Integer.valueOf(1)));
 		assertFalse(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
 		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_B));
@@ -233,7 +229,7 @@ public class GenericMapToListTest_Tree extends TestCase
 		populate();
 		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_A));
 		// Keys are .equals items, not instance
-		assertTrue(dkm.containsInList(new Integer(1), CONST_A));
+		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_A));
 		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_B));
 		assertTrue(dkm.containsInList(Integer.valueOf(1), CONST_C));
 		assertFalse(dkm.containsInList(Integer.valueOf(1), CONST_D));
@@ -305,7 +301,7 @@ public class GenericMapToListTest_Tree extends TestCase
 	@Test
 	public void testAddAll()
 	{
-		List<Character> l = new ArrayList<Character>();
+		List<Character> l = new ArrayList<>();
 		l.add(CONST_A);
 		l.add(null);
 		l.add(CONST_A);
@@ -331,7 +327,6 @@ public class GenericMapToListTest_Tree extends TestCase
 		Character ca = Character.valueOf('a');
 		Character cb = Character.valueOf('b');
 		Character cc = Character.valueOf('c');
-		Character ca1 = new Character('a');
 		Integer i1 = Integer.valueOf(1);
 		dkm.addToListFor(i1, ca);
 		dkm.addToListFor(i1, cb);
@@ -343,6 +338,7 @@ public class GenericMapToListTest_Tree extends TestCase
 		dkm.addToListFor(i3, cb);
 		dkm.addToListFor(i3, cc);
 		assertTrue(dkm.containsInList(i1, ca));
+		Character ca1 = new Character('a');
 		assertTrue(dkm.containsInList(i1, ca1));
 		assertTrue(dkm.removeFromListFor(i1, ca1));
 		assertFalse(dkm.containsInList(i1, ca));
@@ -360,9 +356,8 @@ public class GenericMapToListTest_Tree extends TestCase
 	@Test
 	public void testAddAllLists()
 	{
-		HashMapToList<Integer, Character> dkm2 =
-				new HashMapToList<Integer, Character>();
 		populate();
+		HashMapToList<Integer, Character> dkm2 = new HashMapToList<>();
 		dkm2.addAllLists(dkm);
 		assertTrue(dkm.removeFromListFor(Integer.valueOf(1), CONST_A));
 		assertTrue(dkm2.containsInList(Integer.valueOf(1), CONST_A));
